@startuml
entity BodyPart {
    name String
    muscles Set<Muscle>
}

entity Muscle {
    scientificName String
    shortName String
    bodyPart BodyPart
    exercisesPrimaryMuscle Set<Exercise>
    exercisesSecondaryMuscle Set<Exercise>
}

entity Exercise {
    name String
    primaryMusclesWorked Set<Muscle>
    secondaryMusclesWorked Set<Muscle>
    exerciseUnits Set<ExerciseUnit>
}

entity ExerciseUnit {
    exercise Exercise
    setOfRepetitions List<SetOfRepetitions>
    workoutProgram Set<WorkoutProgram>
}

entity SetOfRepetitions {
    numberOfRepetitions Integer
    weight Weight
    exerciseUnit ExerciseUnit
}

entity Weight {
    numericalValue Double
    unit WeightUnit
}

entity WeightUnit {
    name String
    symbol String
}

entity WorkoutProgram {
    name String
    exerciseUnits List<ExerciseUnit>
    remarks String
}

Weight --> WeightUnit
SetOfRepetitions --> Weight
BodyPart "1" <--> "*" Muscle
ExerciseUnit "*" <--> "*" WorkoutProgram
ExerciseUnit "1" <--> "*" SetOfRepetitions
Muscle "*" <--> "*" Exercise
Muscle "*" <--> "*" Exercise
Exercise "1" <--> "*" ExerciseUnit

@enduml
